--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "nitin",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "mongoose": "^8.9.3"
   }
